Add sqlite.net for pcl projects and some database tests.
Signed-off-by: David Hoffmann <david@hoffmann-projcts.de>

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -41,6 +41,15 @@
     <Reference Include="nunit.framework">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Data.SQLite">
+      <HintPath>..\packages\System.Data.SQLite.1.0.90.0\lib\net40\System.Data.SQLite.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data.SQLite.Linq">
+      <HintPath>..\packages\System.Data.SQLite.1.0.90.0\lib\net40\System.Data.SQLite.Linq.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLite.Net.Platform.Win32">
+      <HintPath>..\packages\SQLite.Net.Platform.Win32.2.0.2\lib\net4\SQLite.Net.Platform.Win32.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestLogging.cs" />
@@ -51,5 +60,8 @@
       <Project>{8AB0C6C3-A5B7-4D5B-B615-232F8E32D8BE}</Project>
       <Name>Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
