--- a/Android/Android.csproj
+++ b/Android/Android.csproj
@@ -77,6 +77,12 @@
     <Reference Include="GoogleAnalytics.Android">
       <HintPath>..\Components\googleanalytics-3.0.2\lib\android\GoogleAnalytics.Android.dll</HintPath>
     </Reference>
+    <Reference Include="SQLite.Net">
+      <HintPath>..\packages\SQLite.Net-PCL.2.0.2\lib\portable-net4+sl4+wp7+win8+monotouch+MonoAndroid\SQLite.Net.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLite.Net.Platform.XamarinAndroid">
+      <HintPath>..\packages\SQLite.Net.Platform.XamarinAndroid.2.0.2\lib\MonoAndroid\SQLite.Net.Platform.XamarinAndroid.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Resources\Resource.designer.cs" />
@@ -88,11 +94,13 @@
     <Compile Include="Base\BaseFragment.cs" />
     <Compile Include="Fragments\NewsListFragment.cs" />
     <Compile Include="Fragments\NewsDetailsFragment.cs" />
+    <Compile Include="PCLHelper\PCL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\Strings.xml" />
@@ -667,5 +675,6 @@
     <Folder Include="Fragments\" />
     <Folder Include="Resources\layout-sw600dp-land\" />
     <Folder Include="Resources\" />
+    <Folder Include="PCLHelper\" />
   </ItemGroup>
 </Project>
