--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -52,6 +52,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="AppInit.cs" />
+    <Compile Include="Database\Database.cs" />
+    <Compile Include="Database\Schema\Version.cs" />
+    <Compile Include="PCLBase.cs" />
+    <Compile Include="Database\DBSchema.cs" />
+    <Compile Include="Test\TestDatabase.cs" />
+    <Compile Include="Test\Test.cs" />
+    <Compile Include="Test\TestDBHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
@@ -64,5 +71,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Database\" />
+    <Folder Include="Database\Schema\" />
+    <Folder Include="Test\" />
   </ItemGroup>
 </Project>
